# ADS-ScholarGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: eval_report.md
kg/: queries.cypher  schema.cypher
src/ads_scholargraph/: __init__.py  config.py
src/ads_scholargraph/ads/: __init__.py  client.py
src/ads_scholargraph/api/: main.py
src/ads_scholargraph/graph_analytics/: __init__.py  add_similarity_edges.py  run_analytics.py
src/ads_scholargraph/pipeline/: __init__.py  expand_citations.py  extract.py  load_neo4j.py  transform.py
src/ads_scholargraph/recsys/: __init__.py  cli.py  embedding_recommender.py  eval.py  graph_recommender.py  hybrid.py
src/ads_scholargraph/ui/: app.py  rendering.py
src/ads_scholargraph/utils/: __init__.py  schema_diagram.py  static_graph_renderer.py
tests/: test_api.py  test_eval_metrics.py  test_expand_citations.py  test_graph_recommender.py  test_hybrid.py  test_load_neo4j.py  test_rendering.py  test_run_analytics.py  test_schema_diagram.py  test_similarity_edges.py  test_smoke.py  test_static_graph_renderer.py  test_transform.py
tests/fixtures/: ads_sample.jsonl
