[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ads-scholargraph"
version = "0.1.0"
description = "Production-grade scaffold for an ADS-powered literature knowledge graph and recommender."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "neo4j>=5.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
